# screen_capture

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: CI.yml
src/: capture.rs  declares.rs  egui_impl.rs  ffi_export.rs  ffi_use.rs  fltk_impl.rs  imgui_impl.rs  lib.rs  main.rs  piston_impl.rs  screen_capture.rs  screenshots_impl.rs  selection.rs  utils.rs  wgpu_impl.rs  winit_impl.rs
src/egui_impl/: assets.rs  core.rs  mod.rs
src/ffi_use/: to_ffi.rs
src/fltk_impl/: box_selection_impl.rs
src/imgui_impl/: core.rs  mod.rs  prefab.rs
src/imgui_impl/support/: mod.rs
src/support/: mod.rs
src/utils/: mod.rs
