[package]
name = "screen_capture"
version = "0.2.0"
edition = "2021"
authors = ["lopo<lopo@zju.edu.cn>"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi = "2.11.2"
napi-derive = "2.11.1"

fltk = { version = "1.4.5", features = ["no-pango", "no-images"] }
screenshots = { version = "0.6.0" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true  #  Link-Time Optimization